--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.1"
+  },
+  "scripts": {
+    "dev": "tailwind -i src/main.css -o public/main.min.css --watch --poll"
   }
 }
